This is my second commit

--- a/public/shopper-template.html
+++ b/public/shopper-template.html
@@ -183,6 +183,7 @@
             <span class="me-3"><a href="javascript:NavClick('jewelery')">Jewelery</a></span>
             <span class="me-3"><a href="javascript:NavClick('men\'s clothing')">Men's Fashion</a></span>
             <span class="me-3"><a href="javascript:NavClick('women\'s clothing')">Women's Fashion</a></span>
+            <span class="me-3"><a href="javascript:NavClick('Login')">Login</a></span>
         </div>
 
         <div>
