--- a/public/shopper-template.html
+++ b/public/shopper-template.html
@@ -250,6 +250,7 @@
                         <li><input type="checkbox">Jewelery</li>
                         <li><input type="checkbox">Men's Fashion</li>
                         <li><input type="checkbox">Woman's Fashion</li>
+                        <li><input type="text"> Login</li>
                     </ul>
                 </div>
             </div>
